--- a/css/index.css
+++ b/css/index.css
@@ -144,14 +144,14 @@ table {
 html {
   font-size: 62.5%;
 }
-html,
-body {
+body,
+html {
   font-family: 'Open Sans Condensed', sans-serif;
   color: black;
 }
 @media (max-width: 500px) {
-  html,
-  body {
+  body,
+  html {
     margin-right: 5px;
     margin-left: 5px;
   }
@@ -160,7 +160,8 @@ h1,
 h2,
 h3,
 h4,
-h5 {
+h5,
+.navbtn {
   font-family: 'Amatic SC', cursive;
   color: black;
 }
@@ -209,7 +210,7 @@ p {
   }
 }
 .overlay {
-  height: 0%;
+  height: 0;
   width: 100%;
   position: absolute;
   z-index: 1;
@@ -244,8 +245,8 @@ span {
   justify-content: center;
   padding-top: 3rem;
 }
-.overlay a:hover,
-.overlay a:focus {
+.overlay a:focus,
+.overlay a:hover {
   color: #f1f1f1;
 }
 .overlay .closebtn {
@@ -320,9 +321,9 @@ a {
     margin-top: 6rem;
   }
 }
+.midPageTxt,
 h1,
-p,
-.midPageTxt {
+p {
   display: flex;
   justify-content: center;
 }
@@ -424,7 +425,7 @@ button {
 .btn-center a {
   color: white;
   text-decoration: none;
-  margin: 0px;
+  margin: 0;
 }
 .fullImgTxt {
   position: relative;
